--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ transformers
 # For MLX embedding backend (embed.py) - Optional, only needed on Apple Silicon
 mlx
 mlx-lm
+
+sae-lens
+transformer-lens
